--- a/frontend/frontend/src/App.css
+++ b/frontend/frontend/src/App.css
@@ -1,38 +1,37 @@
-/* .App {
+
+.app-container {
+  display: flex;
+}
+
+
+.sidebar {
+  width: 200px;
+  background-color: #f8f9fa;
+  padding: 15px;
+}
+
+.sidebar h3 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sidebar .model-list {
+  list-style-type: none;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sidebar .model-list li {
+  padding: 10px;
+  cursor: pointer;
+  border-bottom: 1px solid #ddd;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.sidebar .model-list li:hover {
+  background-color: #ddd;
+}
+
+footer {
+  background-color: #333;
   color: white;
+  padding: 20px;
+  text-align: center;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
